half broken configs